--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 </head>
 
 <body>
-  <div class="btn-container">
-    <button onclick="rockClick()" id="btnRock">Rock</button>
-    <button onclick="paperClick()" id="btnPaper">Paper</button>
-    <button onclick="scissorsClick()" id="btnScissors">Scissors</button>
+  <h1>Rock - Paper - Scissors</h1>
+  <div class="img-container">
+    <img onclick="rockClick()" id="btnRock" src="images/rock image.png">
+    <img onclick="paperClick()" id="btnPaper" src="images/paper image.png">
+    <img onclick="scissorsClick()" id="btnScissors" src="images/scissors image.png">
   </div>
   <div class="choice">
     <h1 id="playerChoice">Player:</h1>
     <h1 id="compChoice">Computer:</h1>
   </div>
+  <div class="popup">
+    <span id="popUp"></span>
+    <p id="message"></p>
+  </div>
   <div class="score">
     <h3>Player Score: <span id="p0"">0</span></h3>
-    <h3>Computer Score: <span id=" c0"">0</span></h3>
+    <h3>Computer Score: <span id="c0"">0</span></h3>
   </div>
   <script src="script.js"></script>
 </body>
