changed bgColor of resultDisplay
now shows different colors of background for different result cases of the game and did some minor formatting

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <h1>Rock - Paper - Scissors</h1>
   <div class="img-container">
-    <img onclick="rockClick()" id="btnRock" src="images/rock image.png">
-    <img onclick="paperClick()" id="btnPaper" src="images/paper image.png">
-    <img onclick="scissorsClick()" id="btnScissors" src="images/scissors image.png">
+    <img onclick="rockClick()" id="imgRock" src="images/rock image.png">
+    <img onclick="paperClick()" id="imgPaper" src="images/paper image.png">
+    <img onclick="scissorsClick()" id="imgScissors" src="images/scissors image.png">
   </div>
   <div class="choice">
     <h1 id="playerChoice">Player:</h1>
